--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Woorimap_FieldManager</string>
+    <string name="app_name">현장조사 프로그램</string>
 </resources>
